@@ -1688,11 +1688,11 @@ passage leads south, and a low crawl goes east.
 
 > foe
 
-OK
+Nothing happens.
 
 > foo
 
-Done!
+Nothing happens.
 
 
 You scored 311 out of a possible 430, using 291 turns.
