@@ -1,5 +1,8 @@
 = Open Adventure project news =
 
+Repository head::
+  Commands in magic-word sequence now interrupt it, as in original.
+
 1.14: 2023-03-09::
   Added -a option for BBS door systems.
   -o reverts to the old message on some failed magic words. 
